--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -353,7 +353,7 @@
                                 </a>                                      
                             </div>   
                         </div>      
-                        <p class="block-text open-class" style="cursor: pointer;" data-form='3'>Забыли пароль?</p>
+                        <p class="block-text open-class mb10" style="cursor: pointer;" data-form='3'>Забыли пароль?</p>
                         <p class="block-text"><span class="open-class" style="cursor: pointer;" data-form='2'>Зарегистрироваться</span></p>
                     </form>
 
@@ -428,7 +428,7 @@
                             <p class="block-text">На <span>alalalallalla@gmail.com</span> отправлено письмо<br> с инструкцией по восстановлению пароля.</p>
                         </div>      
                     </form>
-                    <div id="form_bg" class="form_bg" style=""></div>
+                    <div id="form_bg" class="form_bg" style="display: none;"></div>
 
                     <div class="form-user-comments-text">
                         <div class="form-border">
@@ -474,9 +474,36 @@
                                 <div class="user-text">
                                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
                                 </div>
-                                <div class="user-replay">
-                                    <span>Replay</span>
-                                </div>
+                                <div class="block-replay">
+                                    <div class="user-replay">
+                                        <span id="btn-replay-1" style="cursor: pointer;">Replay</span>
+                                    </div>
+                                    <div id="form-reply-1" class="form-replay">
+                                        <div class="box-flex">
+                                            <div class="user-photo-replay mr20">
+                                                <svg width="70" height="70">
+                                                    <pattern id="pattern-6" width="100%" height="100%">
+                                                    <image href="img/funtome-blog/user-photo/user-replay.png" width="70" height="70" preserveAspectRatio="xMidYMin slice"></image>
+                                                    </pattern>
+                                                    <circle cx="35" cy="35" r="35" fill="url(#pattern-6)"></circle>
+                                                </svg>
+                                            </div>
+                                            <div class="replay-comments-block">
+                                                <div class="replay-comments">
+                                                    <textarea name="message" cols="30" rows='10' class="replay-form" placeholder="Replay"></textarea>
+                                                </div>
+                                                <div class="replay-button">
+                                                    <a href="#" class="butt-border mr20">
+                                                        <span class="butt-border-text">Cancel</span>
+                                                    </a>
+                                                    <a href="#" class="butt-border">
+                                                        <span class="butt-border-text">Post</span>
+                                                    </a>                                        
+                                                </div>   
+                                            </div>
+                                        </div>    
+                                    </div>    
+                                </div>    
                             </div>    
                         </div> <!-- user-comments end -->
 
@@ -497,9 +524,36 @@
                                 <div class="user-text">
                                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
                                 </div>
-                                <div class="user-replay">
-                                    <span>Replay</span>
-                                </div>
+                                <div class="block-replay">
+                                    <div class="user-replay">
+                                        <span id="btn-replay-25" style="cursor: pointer;">Replay</span>
+                                    </div>
+                                    <div id="form-reply-2" class="form-replay">
+                                        <div class="box-flex">
+                                            <div class="user-photo-replay mr20">
+                                                <svg width="70" height="70">
+                                                    <pattern id="pattern-6" width="100%" height="100%">
+                                                    <image href="img/funtome-blog/user-photo/user-replay.png" width="70" height="70" preserveAspectRatio="xMidYMin slice"></image>
+                                                    </pattern>
+                                                    <circle cx="35" cy="35" r="35" fill="url(#pattern-6)"></circle>
+                                                </svg>
+                                            </div>
+                                            <div class="replay-comments-block">
+                                                <div class="replay-comments">
+                                                    <textarea name="message" cols="30" rows='10' class="replay-form" placeholder="Replay"></textarea>
+                                                </div>
+                                                <div class="replay-button">
+                                                    <a href="#" class="butt-border mr20">
+                                                        <span class="butt-border-text">Cancel</span>
+                                                    </a>
+                                                    <a href="#" class="butt-border">
+                                                        <span class="butt-border-text">Post</span>
+                                                    </a>                                        
+                                                </div>   
+                                            </div>
+                                        </div>    
+                                    </div>    
+                                </div>    
                             </div>    
                         </div> <!-- user-comments end -->
 
@@ -520,32 +574,35 @@
                                 <div class="user-text">
                                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
                                 </div>
-                                <div class="user-replay">
-                                    <span class="toggle" style="cursor: pointer;">Replay</span>
-                                </div>
+                                
                                 <div class="block-replay">
-                                    <div class="box">
-                                        <div class="user-photo-replay mr20">
-                                            <svg width="70" height="70">
-                                                <pattern id="pattern-6" width="100%" height="100%">
-                                                <image href="img/funtome-blog/user-photo/user-replay.png" width="70" height="70" preserveAspectRatio="xMidYMin slice"></image>
-                                                </pattern>
-                                                <circle cx="35" cy="35" r="35" fill="url(#pattern-6)"></circle>
-                                            </svg>
-                                        </div>
-                                        <div class="replay-comments-block">
-                                            <div class="replay-comments">
-                                                <textarea name="message" cols="30" rows='10' class="replay-form" placeholder="Replay"></textarea>
+                                    <div class="user-replay">
+                                        <span id="btn-replay-3" style="cursor: pointer;">Replay</span>
+                                    </div>
+                                    <div id="form-reply-3" class="form-replay">
+                                        <div class="box-flex">
+                                            <div class="user-photo-replay mr20">
+                                                <svg width="70" height="70">
+                                                    <pattern id="pattern-6" width="100%" height="100%">
+                                                    <image href="img/funtome-blog/user-photo/user-replay.png" width="70" height="70" preserveAspectRatio="xMidYMin slice"></image>
+                                                    </pattern>
+                                                    <circle cx="35" cy="35" r="35" fill="url(#pattern-6)"></circle>
+                                                </svg>
                                             </div>
-                                            <div class="replay-button">
-                                                <a href="#" class="butt-border mr20">
-                                                    <span class="butt-border-text">Cancel</span>
-                                                </a>
-                                                <a href="#" class="butt-border">
-                                                    <span class="butt-border-text">Post</span>
-                                                </a>                                        
-                                            </div>   
-                                        </div>
+                                            <div class="replay-comments-block">
+                                                <div class="replay-comments">
+                                                    <textarea name="message" cols="30" rows='10' class="replay-form" placeholder="Replay"></textarea>
+                                                </div>
+                                                <div class="replay-button">
+                                                    <a href="#" class="butt-border mr20">
+                                                        <span class="butt-border-text">Cancel</span>
+                                                    </a>
+                                                    <a href="#" class="butt-border">
+                                                        <span class="butt-border-text">Post</span>
+                                                    </a>                                        
+                                                </div>   
+                                            </div>
+                                        </div>    
                                     </div>    
                                 </div>    
                             </div>    
@@ -568,9 +625,34 @@
                                 <div class="user-text">
                                     There are many variations of passages of Lorem Ipsum available.
                                 </div>
-                                <div class="user-replay">
-                                    <span>Replay</span>
-                                </div>
+                                <div class="block-replay">
+                                    <span class="user-replay" id="btn-replay-4" style="cursor: pointer;">Replay</span>
+                                    <div id="form-reply-4" class="form-replay">
+                                        <div class="box-flex">
+                                            <div class="user-photo-replay mr20">
+                                                <svg width="70" height="70">
+                                                    <pattern id="pattern-6" width="100%" height="100%">
+                                                    <image href="img/funtome-blog/user-photo/user-replay.png" width="70" height="70" preserveAspectRatio="xMidYMin slice"></image>
+                                                    </pattern>
+                                                    <circle cx="35" cy="35" r="35" fill="url(#pattern-6)"></circle>
+                                                </svg>
+                                            </div>
+                                            <div class="replay-comments-block">
+                                                <div class="replay-comments">
+                                                    <textarea name="message" cols="30" rows='10' class="replay-form" placeholder="Replay"></textarea>
+                                                </div>
+                                                <div class="replay-button">
+                                                    <a href="#" class="butt-border mr20">
+                                                        <span class="butt-border-text">Cancel</span>
+                                                    </a>
+                                                    <a href="#" class="butt-border">
+                                                        <span class="butt-border-text">Post</span>
+                                                    </a>                                        
+                                                </div>   
+                                            </div>
+                                        </div>    
+                                    </div>    
+                                </div>    
                             </div>    
                         </div> <!-- user-comments end -->
 
@@ -591,9 +673,35 @@
                                 <div class="user-text">
                                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
                                 </div>
-                                <div class="user-replay">
-                                    <span>Replay</span>
-                                </div>
+
+                                <div class="block-replay">
+                                    <span class="user-replay" id="btn-replay-5" style="cursor: pointer;">Replay</span>
+                                    <div id="form-reply-5" class="form-replay">
+                                        <div class="box-flex">
+                                            <div class="user-photo-replay mr20">
+                                                <svg width="70" height="70">
+                                                    <pattern id="pattern-6" width="100%" height="100%">
+                                                    <image href="img/funtome-blog/user-photo/user-replay.png" width="70" height="70" preserveAspectRatio="xMidYMin slice"></image>
+                                                    </pattern>
+                                                    <circle cx="35" cy="35" r="35" fill="url(#pattern-6)"></circle>
+                                                </svg>
+                                            </div>
+                                            <div class="replay-comments-block">
+                                                <div class="replay-comments">
+                                                    <textarea name="message" cols="30" rows='10' class="replay-form" placeholder="Replay"></textarea>
+                                                </div>
+                                                <div class="replay-button">
+                                                    <a href="#" class="butt-border mr20">
+                                                        <span class="butt-border-text">Cancel</span>
+                                                    </a>
+                                                    <a href="#" class="butt-border">
+                                                        <span class="butt-border-text">Post</span>
+                                                    </a>                                        
+                                                </div>   
+                                            </div>
+                                        </div>    
+                                    </div>    
+                                </div>    
 
                             </div>    
                         </div> <!-- user-comments end -->
@@ -653,7 +761,7 @@
     </div> <!-- End App -->
 
     <script src="/js/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/js/owlCarousel/owl.carousel.min.js"></script>
 
     <script>
@@ -673,10 +781,14 @@
     <script>
         $(document).ready(function (){
 
-            $('.open-class').click(function(){
+            $('.open-class').click(function(event){
+                event.preventDefault();
+
                 let form_id = $(this).attr('data-form');
+                $('.modal').hide(0)
                 $('#form' + form_id).fadeIn();
                 $('.form_bg').fadeIn();
+
             
 
                 $('.form_bg').click(function(){
@@ -688,11 +800,10 @@
         });
     </script>
 
-
     <script> 
-        $(document ).ready(function(){
-            $( ".toggle" ).click(function(){ 
-                $( ".block-replay" ).slideToggle(); 
+        $(document).ready(function (){
+            $('.user-replay').on('click', function() {
+                $(this).siblings('.form-replay').slideToogle();
             });
         });
     </script>
