--- a/funtome-paki-card.html
+++ b/funtome-paki-card.html
@@ -667,7 +667,7 @@
         });
     </script>
 
-    <script>
+    <!-- <script>
         function selectStyle (elem, style) {
 
             let spisok = document.querySelectorAll('.butt-style-structure');
@@ -685,7 +685,7 @@
                 list.classList.remove('style-row'); 
             }
         }
-    </script>
+    </script> -->
 
     <script>
         function selectStyle (elem, style) {
