--- a/funtome_support.html
+++ b/funtome_support.html
@@ -172,7 +172,7 @@
                     <div class="support-window">
                         <div class="group-user-message">
                             <div class="user-form-text">
-                                <textarea name="message" cols="30" rows='10' class="user-from-text-style"
+                                <textarea name="message" class="user-from-text-style"
                                     placeholder="Текст сообщения"></textarea>
                             </div>
                             <div class="support-data">
